--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flake8 = "^7.0.0"
 isort = "^5.13.2"
 notebook = "^7.0.6"
 ipywidgets = "^8.1.1"
+seaborn = "^0.13.1"
 
 [build-system]
 requires = ["poetry-core"]
