--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tensorboard = "^2.15.1"
 tensorboard-plugin-profile = "^2.15.0"
 torch-tb-profiler = "^0.4.3"
 sbx-rl = "^0.10.0"
+pygame = "^2.5.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
