speed up debugger, add crop_img parameter to WarpFrame wrapper with black padding, add filters for RAM space in StageWrapper and add new forward/backward progress factors for rewards

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ optuna = "^3.5.0"
 plotly = "^5.18.0"
 optuna-dashboard = "^0.14.0"
 torchvision = "^0.17.1"
+snakeviz = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
