--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
 stable-retro = "^0.9.2"
-stable-baselines3 = "^2.2.1"
+stable-baselines3 = ">=2.2.1,<2.3"
 opencv-python = "^4.9.0.80"
 tensorboard = "^2.15.1"
 tensorboard-plugin-profile = "^2.15.0"
