--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
 stable-retro = "^0.9.2"
-stable-baselines3 = ">=2.2.1,<2.3"
+stable-baselines3 = "^2.3.2"
 opencv-python = "^4.9.0.80"
 tensorboard = "^2.15.1"
 tensorboard-plugin-profile = "^2.15.0"
 torch-tb-profiler = "^0.4.3"
 pygame = "^2.5.2"
+sb3-contrib = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
