--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tensorboard-plugin-profile = "^2.15.0"
 torch-tb-profiler = "^0.4.3"
 pygame = "^2.5.2"
 sb3-contrib = "^2.3.0"
+rllte-core = "^0.0.1b13"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
@@ -22,7 +23,7 @@ flake8 = "^7.0.0"
 isort = "^5.13.2"
 notebook = "^7.0.6"
 ipywidgets = "^8.1.1"
-seaborn = "^0.13.1"
+seaborn = "^0.12.2"
 optuna = "^3.5.0"
 plotly = "^5.18.0"
 optuna-dashboard = "^0.14.0"
