--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ plotly = "^5.18.0"
 optuna-dashboard = "^0.14.0"
 torchvision = "^0.17.1"
 snakeviz = "^2.2.0"
+rich = "^13.7.1"
 
 [build-system]
 requires = ["poetry-core"]
