--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ tensorboard-plugin-profile = "^2.15.0"
 torch-tb-profiler = "^0.4.3"
 pygame = "^2.5.2"
 sb3-contrib = "^2.3.0"
-rllte-core = "^0.0.1b13"
+rllte-core = "1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
